@@ -1,3 +1,10 @@
+2003-02-17  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/posix/sysconf.c (__sysconf): Test for LOGIN_NAME_MAX and
+	TTY_NAME_MAX and not the _POSIX_* minimal value macros.
+	* sysdeps/unix/sysv/linux/bits/local_lim.h: Define TTY_NAME_MAX
+	and LOGIN_NAME_MAX.
+
 2003-02-17  Kevin B. Hendricks  <kevin.hendricks@sympatico.ca>
 	    Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
